<resources>
    <string name="app_name">RestAPi</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_don_t_have_internet_connection">You don\'t have internet connection.</string>
    <string name="retry">Retry</string>
    <string name="connect">Connect</string>
    <string name="mayur_zalavadiya">Mayur Zalavadiya</string>
    <string name="mayurz_hyperlinkinfosystem_net_in">mayurz@hyperlinkinfosystem.net.in</string>
    <string name="button_api_call_demo">Api Call Demo</string>
    <string name="button_api_call_task1">Api Call Task 1</string>
    <string name="button_api_call_task2">Api Call Task 2</string>
    <string name="button_api_call_task3">Api Call Task 3</string>
    <string name="_0">0</string>
    <string name="get">Get</string>
    <string name="button_pagination">Pagination</string>
    <string name="enter_job">Enter Job</string>
    <string name="enter_name">Enter name</string>

    <string name="validation_please_enter_a_name">Please enter name</string>
    <string name="validation_please_enter_a_job">Please enter a job</string>
    <string name="button_post_api_call">Post Api Call</string>
    <string name="post_api">Create User (Post APi)</string>
    <string name="put_api">Update User(put APi)</string>
    <string name="delete_user">Delete User (Delete Api)</string>

    <string name="validation_delete_successfully">Delete Successfully</string>
    <string name="button_user_list_api_call">Users List Api</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="data_not_available">Data not Available</string>
</resources>