<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.activity.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApiCallDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_api_call_demo"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApiCallPagination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_pagination"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonApiCallDemo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPostApiCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_post_api_call"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonApiCallPagination" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApiCallTask1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_api_call_task1"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonPostApiCall" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApiCallTask2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_api_call_task2"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonApiCallTask1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApiCallTask3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/button_api_call_task3"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonApiCallTask2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewWelcome"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/welcome"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonApiCallTask3" />


</androidx.constraintlayout.widget.ConstraintLayout>