<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.demo3.activity.PostActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_items"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_name"
        android:lines="1"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_items"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_job"
        android:inputType="text"
        android:lines="1"
        android:imeOptions="actionDone"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/post_api"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/editTextJob" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/put_api"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonPost" />

 <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/delete_user"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonPut" />

</androidx.constraintlayout.widget.ConstraintLayout>